<resources>
    <string name="app_name">eBookShelf</string>
    <string name="title_download">Download</string>
    <string name="title_booklist">Book List</string>
    <string name="title_map">Map</string>

    <string name="action_settings">Settings</string>
    <string name="main_activity_title">PDF Download Activity</string>
    <string name="instruction">Please provide list of five SJSU PDFs to download
        * hardcode of files is file! or you can provide full qualified names...
    </string>
    <string name="pdf1">PDF1 File Location:</string>
    <string name="pdf2">PDF2 File Location:</string>
    <string name="pdf3">PDF3 File Location:</string>
    <string name="pdf4">PDF4 File Location:</string>
    <string name="pdf5">PDF5 File Location:</string>
    <string name="download_btn">Start download</string>
    <string name="title_activity_maps">Map</string>
</resources>
